add_compile_options(-std=c++11)
include_directories(/home/zhangeaky/DataStructure/BinaryTree)
add_executable(preorder preorder/preorder.cc Treenode.hpp)
add_executable(inorder inorder/inorder.cc)
add_executable(postorder postorder/postorder.cc)
add_executable(inorderUsingStack inorder/inorderStack.cc)
